fixed ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
-.metadata
-assignment01/.settings
-assignment01/bin
-assignment01/.classpath
-assignment01/.project
-assignment02/.settings
-assignment02/bin
-assignment02/.classpath
-assignment02/.project
-assignment03/.settings
-assignment03/bin
-assignment03/.classpath
-assignment03/.project
-assignment04/.settings
-assignment04/bin
-assignment04/.classpath
-assignment04/.project
+**/.metadata
+**/.settings
+**/.classpath
+**/.project
+**/bin/
